--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,6 @@
 @layer base {
   html {
     font-family: "Inter", sans-serif;
-    color: red;
-  }
-
-  .transparent-input .react-select__input {
-    background: transparent;
+    color: white;
   }
 }
